--- a/session1_linear_layout/app/src/main/res/values/strings.xml
+++ b/session1_linear_layout/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Linear Layout</string>
     <string name="hello">Hello world</string>
+    <string name="input_prompt">please input your name</string>
 </resources>
