--- a/CalendarManager/app/src/main/res/values/strings.xml
+++ b/CalendarManager/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="unkown_time">未知时间</string>
     <string name="now_number">当前任务总数：</string>
     <string name="not_finished">未完成：</string>
-
+    <string name="finish">点击完成</string>
 </resources>
